# glider

./: .gitignore  CMakeLists.txt  README.md
config/: graph_params.yaml
docker/: Dockerfile  build.bash  run.bash
glider/: CMakeLists.txt  output.txt  package.xml
glider/config/: graph_params.yaml  ros_params.yaml
glider/include/glider/core/: factor_manager.hpp  factor_manager_dep.hpp  glider.hpp  imu_buffer.hpp  odometry.hpp  state.hpp
glider/include/glider/ros/: factor_node.hpp  node_utils.hpp
glider/include/glider/utils/: geodetics.hpp  gps_heading.hpp  odom.hpp  parameters.hpp  quaternion.hpp
glider/include/ros/: conversions.hpp  glider_node.hpp
glider/launch/: glider-component.launch.py  glider-node.launch.py  glider.launch  glider.launch.py
glider/ros/: conversions.cpp  factor_node.cpp  glider_node.cpp  node.cpp
glider/src/: factor_manager.cpp  factor_manager_dep.cpp  glider.cpp  imu_buffer.cpp  odom.cpp  odometry.cpp  parameters.cpp  quaternion.cpp  state.cpp
glider/test/: test_factors.cpp  test_ll_to_utm.cpp
include/glider/core/: factor_manager.hpp
include/glider/utils/: gps_heading.hpp  quaternion.hpp
src/: factor_manager.cpp  imu_buffer.cpp  params.cpp  quaternion.cpp  state.cpp
test/: test_factors.cpp  test_heading.cpp  test_params.cpp  test_quaternion.cpp
